2010-11-23 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/C/nact-starting.xml:
	Work-around in order to be able sl pdf.

	* doc/nact/Makefile.am:
	Include non-translated figures in translated pdf.

2010-11-22 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am:
	Be tolerant about not buildable pdf.

	* po/POTFILES.in:
	Fix #635521: translatable sentences of the *.ui files don't appear in .po file.

	* run-autogen.sh:
	Clean up aborted make distcheck before running autogen.

	* doc/nact/C/nact-execution.xml:
	Fix typo in NACT user's manual.

	* src/core/na-icontext-factory.c:
	Fix #632992: add comment about default value translation.

2010-09-23 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Pre-release version bump.

	* doc/api/Makefile.am: Fix the warning when overriding GTKDOC_RUN.

	* m4/na-enable-manuals.m4:
	* run-autogen.sh:
	Update --enable-html-manuals and --enable-pdf-manuals options.

	* doc/nact/Makefile.am:
	Do not rebuild pdf files each time make is run.
	Have figures available when pdf are built.
	Install figures with html documents.

2010-09-04 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am: Fix make distcheck.

2010-09-03 Pierre Wieser <pwieser@trychlos.org>

	Declare --with-db2html and --with-gdt options.

	* Makefile.am:
	Defaut distribution includes PDF and gnome-doc-tool HTML manuals.

	* doc/nact/Makefile.am:
	* m4/na-enable-manuals.m4:
	Define --with-db2html and --with-gdt options.

	* doc/nact/Makefile.am:
	HTML and PDF installations honor --htmldir= and --pdfdir= options.

	* doc/nact/Makefile.am:
	Fix make distcheck when distributing tranlations of NACT user's manual.

	* configure.ac:
	Revert inversion of AC_CANONICAL_TARGET and AM_INIT_AUTOMAKE.

	* src/io-desktop/nadp-writer.c (write_done_write_subitems_list):
	Improve debug messages.

	* src/nact/nact-icommand-tab.c
	(on_tab_updatable_selection_changed): Update example label.
	(parse_parameters): Cleanup code.
